# p2pvote

./: .gitignore  Cargo.toml  README.md
example_data/: bulk.csv  id_pool.csv  network.csv  vote_mappings.csv
scripts/: create_bulk_example.py  create_network_csv.py  create_pool.py  presentation.sh  run_network.py
src/: bulk.rs  headless.rs  interactive.rs  main.rs  storage.rs
